--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <div class="explainer"><span>hover me </span> </div>
   <div class="text">fronted development </div> 
   </div>
-</div class="right">
+<div class="right">
  <div class="text">backend development </div>
 </div>
-</div class="righter">
+<div class="righter">
   <div class="text"> SEO </div>
 </div>
 </div>
